fix: go back with back

--- a/bio.html
+++ b/bio.html
@@ -86,7 +86,7 @@
       </div>
     </main>
     <footer>
-      <button onclick="window.location.href='index.html'">[ BACK ]</button>
+      <button onclick="window.history.back()">[ BACK ]</button>
     </footer>
     <script src="script.js"></script>
   </body>
