feat: add avatar ascii

--- a/bio.html
+++ b/bio.html
@@ -86,6 +86,50 @@
               &ndash; diamond top/mid/jungle on EUW and EUNE
             </li>
           </ul>
+          <div class="avatar">
+            <pre>
+@@@&@@@@@&&@@@@@@@@@@@&(@&@&  ,% ,    *%& @@% %   ,,  #*,    &    (       ,*&&&@#,&@@@ (/&@@@/&(%@%(
+@&&&&&&&&&&&&&&&@%&&%/&@&/  ,   %#      (       .        /       /..         . &&&&&&@ (/&&&%,.& &  
+&&&&&&&&&/#*&&&@&&&(,&&*(     # #  * *    ,   %       &    %     *,             &%*  . #&&&## # &   
+@&&&&&&&&&&&&&#&&&/((& /      *  *.        .   *.  %&&@ &&&%&(//,   .(.           .   */*   *%%&(, .
+&&&&&&&&&@&@&&&& &%&                 & *&&(&@&@@@. /&@&&&&&&&%&(#(     ..     *&(   &  %&&@@@&&&&&@&
+&&&&&&&@&&&&@&&&& *%     /    . , #&%@@&&&&&&&&&/#* &@&&&&&,*.                   ..  &&&&&&&&&&&&&& 
+&&&&&&&#&*&%@&@&@&        %@@% @&&&&&&&@&&&%(%&&@%&&&&@&&&%#%%&&,           ,**.   &&&&&&&&&&&&&@& (
+@&&&&&&&%&,#&@&&@&&   .&&&&&&&&&&&&&%#@@&&&&&&&&&&#(&&@&&&&%&%&(#%&#               &&&&&&&&&&&&&&  &
+@&&&&&&&&( @&&&&&&(  ,%&@&&&&&(#&&&&&&&&@&&&&%(&&&(&&&,  &&%%%%%&%&%&&          .( @&&&&@&&&&&&&# &&
+&&&&&&@@&@&@.,*(&@   (@&@&&&&&&&&&&&&&&&&&&&&&&@@&.*..%&&&&&&#(%%&#%%&&%          %*&@&&&( / / & *@&
+&&&&@&&&&&&&%& # /    ,&@@&&&&&&&&&&&&&&&@&&&&*  ...&&@@@@&@&&&(&##&%&&%%          %&&&&& # & && &@&
+@@@&@*%&@&@&%(&&&&&   /&@&&&&@@&@&&&&&&&&&& , ., #@&%/&&&*.     /%@&&&&&& (          .@&@@&&&&&&&&&&
+@&&&&&&&/&&&/&,/,     (,,... .     %&&&&@&(..*#(&&@ %@&&   &&/, (&%&&&&&,#&        &&#& &&&&&&@@@&&&
+@&&@&&/&&&/ ,/&&&&&   &&&&&&&&&&&(,, .&&&&/,*,*&&*.&&&#.**/(*( %&&&&&&&&%&&(     .% ,.%(*%          
+@&&&&&&#&/&& */%,/*   &&&@*&#  .,  &@# &@&&%&*   &&&&@&&&&&@&&%%%&&&&&&*%&&&       *  /..*#         
+@&&&&&&&&&&&&&     &%  &&&&&&&,    //*/@&&(%%&&&&&%&&&&&&&&@&%##&&&&&&&&&&&%     /. %# ,#/%#        
+&&&&&&&&&&@@&&#,&&&@@& %@@&&.  &&@&.&&&&&&&%&&@&@@&&@&&&@&@&&&&#%%&&&&&&&&&%      % &&%,%,#(  /     
+@&&&&&&&/#&&&&&&&*(   , &&@&&&@@&&&&&%&%.%. (#&&&&&&&&&&&&@&(%%&&&&&&&&&&&&&    %  *,.#%(.#        %
+&&&&&&&&&@&&@&&&&&@&%.  (&&&&&&&@&&&&%&&@#%#%&&%/#&&&&&&&&&&%%&&&&&&&&&&%&&%&.   .*   ,,(        .  
+@&&&&&&&&&&&%(%%(&&@&&(# &&&&@@&&&&&&@,&&&@&*(  &@&&&&&&@&&%&%&&&&&&&%%%%&&(&#,%, / . %&      ,   ( 
+@&&&&&&&&&&@@@&%&#%&@* /. &&&&&,%@&&&@&&@&/(.&&&@&&&&&&&&%&&&&&&&&&&&%%%&&&#%&(%%#*&*%(   ,(    (,  
+@&&&&&&&&&&&@&&&&@@&&&&%&,,, #%&&&&&&&&&&&%(&&@@@&&&&@&@@&&&&&&%&&%%%%%%&%%&%%*%%&%%.( .,    %&((% %
+&&&&&&&&&@&&*&&&&&&@&@&@.(& %@@&@&&&&&&&&&/%#&&&&&&&%%&%&%%%%%&&&&%&&%%%&&&&%&.. .     **& ,* ,/ % &
+@&&&&&&&&&&&& &&&&&&&&&&&&%(/&@&&&&&&&&*(/..,#%&&&&&&&&@&&&%&%&&&%&%%%%%&%%%%  %%,( %&(    &  ,*&&&,
+@&&&&&&&@&&&&%,@@@&&&&&&&&&@%&#&&&&@&&&@&&&&&&&&&%* #(&&%%&%&%&&&%%%%%%%%%(   (%%##**&  # /. &@@*&&&
+@&&&&&&&&&&&@&,&&@&&&/@%&&@(&%& &&&&&&&&&&%* .,#%(*(&(&&&&&&&%%&&%&%&%%% ./%%%%%%%#(,      &&%%%.@@@
+&&&&&&&&&&&&&@&&&#&&&@&&&&&&&&&&%,&&&@&&&&&&&&&&&&&&&@@%%%&&%%%%%%%%&%/#* ,%%%%%%%%&         &&@&(&&
+@&&&&&&&&&&&&&&&&,#@&&@&&&&&&&&&&&#.&&&&&&&&&&&&&&&&&&##&%&%&%%%%%&%# .(//#%%%%%%#%%/         &&&&&&
+@&&&&&&&&&&&&&&&@&&#&@@&@@&&&&@&&&&&&(@@&&&&&&&&&&&&&#(#%%&%%%%%&#*.//,##%&%%%%%&%%%%          &@@&&
+@&&&&&&&&&&&&&&&&&&&&.&(&&&&&&&&%@&&&#%%@&@@&&&&&&&&&&###%&%&%%%.#.. #,&%%%%%%&%%#%%%#          &&@&
+@&&&&&&&&&&&&&&&&&&&&@&&(&&&&&&@&&@&%&&&.&&&&&&&&((%(%(#&*##%(#,/%%.#&*((%#%%%%%(%%%%&           &&&
+&&&&&&&&@&&&&&&&&&&&&&&&@&&&&&&&&&&&&&&&&@& *(#&##&##(,&  %(*%#,.*#,#(#(/%%%%&%%%#&%               &
+&&@&@&&&&&&&&&&&@&@&@&&&@&&&&&&&@&&&&&&&&&&&(&&&&&&*     .,(((##%%(#(%%#%%%#%&%%%#(                 
+@&&&&&&&&&&&&&&&&&@@@&&&&&&&&&&&&&&&&&&&&&&  %&&&&&&&&&&%*.. .(/%(###%*(##(%%&&#/                   
+&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&& .  &&@@&&&&&&&&&&&/,/,*%#(&/,%%#/%#(%                    
+%&&&&&&&&&&&&&&&&&&&&&&&&&&&&@&&&&&&&&&&%.     &&&&&&&&&&&&&&&&&%**%%##%*/#%&*                      
+&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&         &&&&&&&&&&&&&&&&&&&(#,%,#%%&,                       
+&%%&&&&&&&&@&&&&&&&&&&&&&&&&&&&&&&&&(            &&&&&&&&&&&&&&&@@&@@@&&@&&                         
+%&&&&%&&&&&&&&&&&&&&&&&&&&&&&@@&&/.             &&&&&&&&&&&&&&&&&&&&&&@@&                           
+%&%&&&&&&&&&&&&&&&&&&@&&&%&%&& *      *      /&&&&&&&&&&&&&&&&&&&&&&&&@%                           
+            </pre>
+          </div>
         </div>
       </div>
     </main>
