fix: remove avatar

--- a/bio.html
+++ b/bio.html
@@ -86,7 +86,7 @@
               &ndash; diamond top/mid/jungle on EUW and EUNE
             </li>
           </ul>
-          <div class="avatar">
+          <!-- <div class="avatar">
             <pre>
 @@@&@@@@@&&@@@@@@@@@@@&(@&@&  ,% ,    *%& @@% %   ,,  #*,    &    (       ,*&&&@#,&@@@ (/&@@@/&(%@%(
 @&&&&&&&&&&&&&&&@%&&%/&@&/  ,   %#      (       .        /       /..         . &&&&&&@ (/&&&%,.& &  
@@ -128,8 +128,8 @@
 &%%&&&&&&&&@&&&&&&&&&&&&&&&&&&&&&&&&(            &&&&&&&&&&&&&&&@@&@@@&&@&&                         
 %&&&&%&&&&&&&&&&&&&&&&&&&&&&&@@&&/.             &&&&&&&&&&&&&&&&&&&&&&@@&                           
 %&%&&&&&&&&&&&&&&&&&&@&&&%&%&& *      *      /&&&&&&&&&&&&&&&&&&&&&&&&@%                           
-            </pre>
-          </div>
+            </pre> 
+          </div> -->
         </div>
       </div>
     </main>
