feat: add 404.html

--- a/bio.html
+++ b/bio.html
@@ -4,7 +4,7 @@
     <meta charset="utf8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="a blockchain developer's portfolio" />
-    <title>highskore</title>
+    <title>highskore - bio</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico?" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" />
