feat: welcome neo

--- a/bio.html
+++ b/bio.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" />
   </head>
   <body>
+    <div class="matrix-effect"></div>
     <main>
       <div class="bio-container">
         <div class="bio-content">
@@ -137,5 +138,6 @@
       <button onclick="window.history.back()">[ BACK ]</button>
     </footer>
     <script src="script.js"></script>
+    <script src="matrix.js"></script>
   </body>
 </html>
