--- a/bio.html
+++ b/bio.html
@@ -135,9 +135,9 @@
       </div>
     </main>
     <footer>
-      <button onclick="window.history.back()">[ BACK ]</button>
+      <button onclick="window.location.href='/'">BACK</button>
     </footer>
-    <script src="script.js"></script>
-    <script src="matrix.js"></script>
+    <script src="scripts/main.js"></script>
+    <script src="scripts/matrix.js"></script>
   </body>
 </html>
