--- a/bio.html
+++ b/bio.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Meta tags -->
     <meta charset="utf8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="a blockchain developer's portfolio" />
     <title>highskore - bio</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico?" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" />
   </head>
   <body>
+    <!-- Matrix effect -->
     <div class="matrix-effect"></div>
     <main>
+      <!-- Main container -->
       <div class="bio-container">
         <div class="bio-content">
+          <!-- Education -->
           <h3>Education</h3>
           <ul>
             <li>
@@ -23,6 +27,7 @@
               >
             </li>
           </ul>
+          <!-- Employment History -->
           <h3>Employment History</h3>
           <ul>
             <li>Freelance fullstack developer at <a href="https://www.upwork.com/">upwork</a></li>
@@ -32,15 +37,15 @@
             <li>Lead blockchain developer at <a href="https://thefootballclub.com/">tfc</a></li>
             <li>Blockchain developer at <a href="http://find.xy">find</a></li>
           </ul>
+          <!-- Hackathons -->
           <h3>Hackathons</h3>
           <ul>
             <li>
-              2nd place at
-              <a href="https://devfolio.co/flow-hackathon/dashboard">flow blockchain hackathon</a>
+              2nd place at <a href="https://devfolio.co/flow-hackathon/dashboard">flow blockchain hackathon</a>
               on the hybrid wallet solution track. (25,000$)
             </li>
           </ul>
-
+          <!-- Open Source -->
           <h3>Open Source</h3>
           <ul>
             <li>
@@ -67,7 +72,7 @@
               &ndash; a Zero Knowledge Proof powered fully on-chain game with Noir and Solidity.
             </li>
           </ul>
-
+          <!-- Fun -->
           <h3>Fun</h3>
           <ul>
             <li>
@@ -137,7 +142,7 @@
     <footer>
       <button onclick="window.location.href='/'">BACK</button>
     </footer>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/bio.js" type="module"></script>
     <script src="scripts/matrix.js"></script>
   </body>
 </html>
