--- a/bio.html
+++ b/bio.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" />
   </head>
   <body>
-    <!-- Matrix effect -->
-    <div class="matrix-effect"></div>
-    <main>
+    <!-- Screen -->
+    <div class="screen">
+      <!-- Matrix effect -->
+      <div class="matrix-effect"></div>
       <!-- Main container -->
       <div class="bio-container">
         <div class="bio-content">
@@ -138,10 +139,11 @@
           </div> -->
         </div>
       </div>
-    </main>
-    <footer>
-      <button onclick="window.location.href='/'">BACK</button>
-    </footer>
+      <!-- Back button -->
+      <div>
+        <button onclick="window.location.href='/'">BACK</button>
+      </div>
+    </div>
     <script src="scripts/bio.js" type="module"></script>
     <script src="scripts/matrix.js"></script>
   </body>
