chore: fix link

--- a/bio.html
+++ b/bio.html
@@ -36,7 +36,7 @@
             <li>Blockchain consultant at <a href="https://wearenotch.com">notch</a></li>
             <li>Blockchain developer at <a href="http://zeedz.io">zeedz</a></li>
             <li>Lead blockchain developer at <a href="https://thefootballclub.com/">tfc</a></li>
-            <li>Blockchain developer at <a href="http://find.xy">find</a></li>
+            <li>Blockchain developer at <a href="http://find.xyz">find labs</a></li>
           </ul>
           <!-- Hackathons -->
           <h3>Hackathons</h3>
