fix: remove unused screen

--- a/bio.html
+++ b/bio.html
@@ -11,89 +11,85 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" />
   </head>
   <body>
-    <!-- Screen -->
-    <div class="screen">
-      <!-- Matrix effect -->
-      <div class="matrix-effect"></div>
-      <!-- Main container -->
-      <div class="bio-container">
-        <div class="bio-content">
-          <!-- Education -->
-          <h3>Education</h3>
-          <ul>
-            <li>
-              Master's degree in Electrical Engineering and Computing, at
-              <a href="https://www.fer.unizg.hr/"
-                >University of Zagreb, Faculty of Electrical Engineering and Computing (FER)</a
-              >
-            </li>
-          </ul>
-          <!-- Employment History -->
-          <h3>Employment History</h3>
-          <ul>
-            <li>Freelance fullstack developer at <a href="https://www.upwork.com/">upwork</a></li>
-            <li>Software developer at <a href="https://wearenotch.com">notch</a></li>
-            <li>Blockchain consultant at <a href="https://wearenotch.com">notch</a></li>
-            <li>Blockchain developer at <a href="http://zeedz.io">zeedz</a></li>
-            <li>Lead blockchain developer at <a href="https://thefootballclub.com/">tfc</a></li>
-            <li>Blockchain developer at <a href="http://find.xyz">find labs</a></li>
-          </ul>
-          <!-- Hackathons -->
-          <h3>Hackathons</h3>
-          <ul>
-            <li>
-              2nd place at <a href="https://devfolio.co/flow-hackathon/dashboard">flow blockchain hackathon</a>
-              on the hybrid wallet solution track. (25,000$)
-            </li>
-          </ul>
-          <!-- Open Source -->
-          <h3>Open Source</h3>
-          <ul>
-            <li>
-              <a href="https://github.com/lukaracki/flow-transaction-service" target="_blank"
-                >flow transaction service</a
-              >
-              &ndash; a nodeJS microservice that runs transactions on the flow blockchain with GCP PubSub and GCP KMS.
-            </li>
-            <li>
-              <a href="https://github.com/lukaracki/flow-go-multisign" target="_blank">flow - go - multisign</a>
-              &ndash; a repository which demonstrates how to implement the serverside multisign transaction pattern on
-              flow.
-            </li>
-            <li>
-              <a href="https://github.com/lukaracki/fcl-kms-gcp-authorizer" target="_blank">GCP KMS flow authorizer</a>
-              &ndash; a nodeJS library used to authorize transactions with GCP KMS on the flow blockchain.
-            </li>
-            <li>
-              <a href="https://github.com/lukaracki/flow-aws-cli" target="_blank">flow AWS CLI</a>
-              &ndash; send flow transactions authorized by AWS KMS through the CLI.
-            </li>
-            <li>
-              <a href="https://github.com/highskore/fyte-smart-contracts" target="_blank">fyte (WIP)</a>
-              &ndash; a Zero Knowledge Proof powered fully on-chain game with Noir and Solidity.
-            </li>
-          </ul>
-          <!-- Fun -->
-          <h3>Fun</h3>
-          <ul>
-            <li>
-              <a href="https://soundcloud.com/raa" target="_blank">raa's soundcloud</a>
-              &ndash; cool music
-            </li>
-            <li>
-              <a href="https://sikboi.tumblr.com/" target="_blank">sikboi's tumblr</a>
-              &ndash; cool images
-            </li>
-            <li>
-              <a href="https://worldofwarcraft.blizzard.com/en-gb/" target="_blank">world of warcraft</a>
-              &ndash; 2.7k+ WW Monk, 2.4k FDK
-            </li>
-            <li>
-              <a href="https://www.leagueoflegends.com/" target="_blank">league of legends</a>
-              &ndash; diamond top/mid/jungle on EUW and EUNE
-            </li>
-          </ul>
-          <!-- <div class="avatar">
+    <!-- Matrix effect -->
+    <div class="matrix-effect"></div>
+    <!-- Main container -->
+    <div class="bio-container">
+      <div class="bio-content">
+        <!-- Education -->
+        <h3>Education</h3>
+        <ul>
+          <li>
+            Master's degree in Electrical Engineering and Computing, at
+            <a href="https://www.fer.unizg.hr/"
+              >University of Zagreb, Faculty of Electrical Engineering and Computing (FER)</a
+            >
+          </li>
+        </ul>
+        <!-- Employment History -->
+        <h3>Employment History</h3>
+        <ul>
+          <li>Freelance fullstack developer at <a href="https://www.upwork.com/">upwork</a></li>
+          <li>Software developer at <a href="https://wearenotch.com">notch</a></li>
+          <li>Blockchain consultant at <a href="https://wearenotch.com">notch</a></li>
+          <li>Blockchain developer at <a href="http://zeedz.io">zeedz</a></li>
+          <li>Lead blockchain developer at <a href="https://thefootballclub.com/">tfc</a></li>
+          <li>Blockchain developer at <a href="http://find.xyz">find labs</a></li>
+        </ul>
+        <!-- Hackathons -->
+        <h3>Hackathons</h3>
+        <ul>
+          <li>
+            2nd place at <a href="https://devfolio.co/flow-hackathon/dashboard">flow blockchain hackathon</a>
+            on the hybrid wallet solution track. (25,000$)
+          </li>
+        </ul>
+        <!-- Open Source -->
+        <h3>Open Source</h3>
+        <ul>
+          <li>
+            <a href="https://github.com/lukaracki/flow-transaction-service" target="_blank">flow transaction service</a>
+            &ndash; a nodeJS microservice that runs transactions on the flow blockchain with GCP PubSub and GCP KMS.
+          </li>
+          <li>
+            <a href="https://github.com/lukaracki/flow-go-multisign" target="_blank">flow - go - multisign</a>
+            &ndash; a repository which demonstrates how to implement the serverside multisign transaction pattern on
+            flow.
+          </li>
+          <li>
+            <a href="https://github.com/lukaracki/fcl-kms-gcp-authorizer" target="_blank">GCP KMS flow authorizer</a>
+            &ndash; a nodeJS library used to authorize transactions with GCP KMS on the flow blockchain.
+          </li>
+          <li>
+            <a href="https://github.com/lukaracki/flow-aws-cli" target="_blank">flow AWS CLI</a>
+            &ndash; send flow transactions authorized by AWS KMS through the CLI.
+          </li>
+          <li>
+            <a href="https://github.com/highskore/fyte-smart-contracts" target="_blank">fyte (WIP)</a>
+            &ndash; a Zero Knowledge Proof powered fully on-chain game with Noir and Solidity.
+          </li>
+        </ul>
+        <!-- Fun -->
+        <h3>Fun</h3>
+        <ul>
+          <li>
+            <a href="https://soundcloud.com/raa" target="_blank">raa's soundcloud</a>
+            &ndash; cool music
+          </li>
+          <li>
+            <a href="https://sikboi.tumblr.com/" target="_blank">sikboi's tumblr</a>
+            &ndash; cool images
+          </li>
+          <li>
+            <a href="https://worldofwarcraft.blizzard.com/en-gb/" target="_blank">world of warcraft</a>
+            &ndash; 2.7k+ WW Monk, 2.4k FDK
+          </li>
+          <li>
+            <a href="https://www.leagueoflegends.com/" target="_blank">league of legends</a>
+            &ndash; diamond top/mid/jungle on EUW and EUNE
+          </li>
+        </ul>
+        <!-- <div class="avatar">
             <pre>
 @@@&@@@@@&&@@@@@@@@@@@&(@&@&  ,% ,    *%& @@% %   ,,  #*,    &    (       ,*&&&@#,&@@@ (/&@@@/&(%@%(
 @&&&&&&&&&&&&&&&@%&&%/&@&/  ,   %#      (       .        /       /..         . &&&&&&@ (/&&&%,.& &  
@@ -137,12 +133,11 @@
 %&%&&&&&&&&&&&&&&&&&&@&&&%&%&& *      *      /&&&&&&&&&&&&&&&&&&&&&&&&@%                           
             </pre> 
           </div> -->
-        </div>
       </div>
-      <!-- Back button -->
-      <div>
-        <button onclick="window.location.href='/'">BACK</button>
-      </div>
+    </div>
+    <!-- Back button -->
+    <div>
+      <button onclick="window.location.href='/'">BACK</button>
     </div>
     <script src="scripts/bio.js" type="module"></script>
     <script src="scripts/matrix.js"></script>
